# jewellery-azure-cutter

./: .gitignore  Cargo.toml  DESIGN.md  README.md  example_config.toml
src/: main.rs
src/azure/: mod.rs
src/boolean/: mod.rs
src/config/: mod.rs
src/detect/: mod.rs
src/mesh/: mod.rs
